--- a/app/public/swagger/index.html
+++ b/app/public/swagger/index.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Swagger UI</title>
-    # Call external css or not loaded correctly
-    <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist@3/swagger-ui.css" />
+    <!-- Call external css or not loaded correctly-->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/5.17.14/swagger-ui.css" />
     <link rel="stylesheet" type="text/css" href="index.css" />
     <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16" />
